Videos / change php to html for most

--- a/local/content/homepage/home.html
+++ b/local/content/homepage/home.html
@@ -6,24 +6,24 @@
   		</div>
 	</div>
 	<div></div>
-	<div align="center" >
+	<div class="homeBanner" align="center" >
 		<a href="/work/cgi">
-			<div style="background-color: red; " class="category-buttons bg-image-cgi">
+			<div class="category-buttons bg-image-cgi bg-image">
 				CGI
 			</div>
 		</a>
 		<a href="/work/webApps">
-			<div style="background-color: green;" class="category-buttons bg-image-cgi">
+			<div class="category-buttons bg-image-webApp bg-image">
 				Web Apps
 			</div>
 		</a>
 		<a href="/work/videos">
-			<div style="background-color: blue; " class="category-buttons bg-image-cgi">
+			<div class="category-buttons bg-image-videos bg-image">
 				Videos
 			</div>
 		</a>
 		<a href="/work/websites">
-			<div style="background-color: red" class="category-buttons bg-image-cgi">
+			<div class="category-buttons bg-image-web bg-image">
 				Websites
 			</div>
 		</a>
@@ -31,6 +31,14 @@
 </div>
 
 <style type="text/css">
+	.homeBanner a{
+		text-decoration: none;
+	}
+
+	.homeBanner a:hover{
+		font-weight: bold;
+	}
+
 	.category-buttons{
 		height: 200px;
 		width: 350px;
@@ -40,12 +48,28 @@
 		font-size: 150%;
 	}
 
-	.bg-image-cgi {
-		background-image: linear-gradient(rgba(25, 25, 25, 0.5), rgba(0, 0, 0, 0.5)), url("media/img/home/main_banner.jpg");
+	.bg-image{
 		background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;
 		position: relative;
+		background-color: black;
+	}
+
+	.bg-image-cgi {
+		background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("media/img/home/main_banner.jpg");
+	}
+
+	.bg-image-webApp {
+		background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("media/img/home/main_banner.jpg");
+	}
+
+	.bg-image-videos {
+		background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("media/img/home/main_banner.jpg");
+	}
+
+	.bg-image-web {
+		background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("media/img/work/websites/2015_Portfolio_1.jpg");
 	}
 
 	.hero-image {
