--- a/local/content/about/about.html
+++ b/local/content/about/about.html
@@ -1,6 +1,9 @@
 <div>
-	<img style="padding: 0 5px" align="left" src="/media/img/about/Reishman_1.jpg" width="143" height="143" alt="">
+	<img style="padding: 0 20px 0 10px;" align="left" src="/media/img/about/Reishman_1.jpg" width="250" height="250">
 	<p>
-		My name is Matt Reishman and I graduated from Southeast Missouri State University spring of 2016 with a major in Computer Information Systems, and also with a minor in Telecommunications Graphics and Computer Networking.
+		My name is Matt Reishman and I graduated from Southeast Missouri State University in the spring of 2016. I majored in Computer Information Systems and also minored in Telecommunications Graphics and Computer Networking.
+	</p>
+	<p>
+		Stuff I enjoy
 	</p>
 </div>
