Added start of web apps

--- a/local/content/work/websites.html
+++ b/local/content/work/websites.html
@@ -295,6 +295,13 @@
         </tr>
     </table>
 </div>
+<table width="100%">
+    <tr>
+        <td>
+           <a href="/about/info" >Click here to view the changelog of the current website</a>
+        </td>
+    </tr>
+</table>
 
 <style type="text/css">
 .lightbox {
