Updated webcore version with fixes

--- a/core/content/about/info.html
+++ b/core/content/about/info.html
@@ -2,6 +2,19 @@
 	<h1>Changelog</h1>
 	<ul>
 		<li>
+			0.1.0.1
+			<ul>
+				<li>
+					Bug Fixes
+					<ul>
+						<li>
+							Fixed JS / CSS link issues
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</li>
+		<li>
 			0.1
 			<ul>
 				<li>
