Updated with 0.1.0.1 of WCMJR

--- a/core/content/about/info.html
+++ b/core/content/about/info.html
@@ -10,6 +10,9 @@
 						<li>
 							Fixed JS / CSS link issues
 						</li>
+						<li>
+							Fixed bug with css breakpoint not working correctly because of missing meta tag
+						</li>
 					</ul>
 				</li>
 			</ul>
