Added webapp thumb

--- a/local/content/homepage/home.html
+++ b/local/content/homepage/home.html
@@ -61,7 +61,7 @@
 	}
 
 	.bg-image-webApp {
-		background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("media/img/home/main_banner.jpg");
+		background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("media/img/work/webApps/webAppsThumb.jpg");
 	}
 
 	.bg-image-videos {
@@ -88,5 +88,6 @@
 		left: 50%;
 		transform: translate(-50%, -50%);
 		color: white;
+		cursor: default;
 	}
 </style>
