Updated WebCoreMJR to 0.1.1

--- a/core/content/about/info.html
+++ b/core/content/about/info.html
@@ -2,6 +2,33 @@
 	<h1>Changelog</h1>
 	<ul>
 		<li>
+			0.1.1
+			<ul>
+				<li>
+					Features
+					<ul>
+						<li>
+							Added gallery module
+						</li>
+						<li>
+							Auto versions css / js files (from file modify time)
+						</li>
+					</ul>
+				</li>
+				<li>
+					Bug Fixes
+					<ul>
+						<li>
+							Incorrect xml files now show 404 page instead of php error
+						</li>
+						<li>
+							Default file fixed for sub directories
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</li>
+		<li>
 			0.1.0.1
 			<ul>
 				<li>
