Updated to WebCoreMJR 0.1.2

--- a/core/content/about/info.html
+++ b/core/content/about/info.html
@@ -2,6 +2,39 @@
 	<h1>Changelog</h1>
 	<ul>
 		<li>
+			0.1.2
+			<ul>
+				<li>
+					Features
+					<ul>
+						<li>
+							Navigation now highlights active page
+						</li>
+						<li>
+							Added sitemap page
+						</li>
+					</ul>
+				</li>
+				<li>
+					Bug Fixes
+					<ul>
+						<li>
+							Gallery images do not require id (gets default from src)
+						</li>
+						<li>
+							Added target option for links in galleries
+						</li>
+						<li>
+							Fixed typo in navigation function
+						</li>
+						<li>
+							Having navigation groups without a main page works correctly now
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</li>
+		<li>
 			0.1.1
 			<ul>
 				<li>
