Fixed gallery bug (WCMJR 0.1.2.1)

--- a/core/content/about/info.html
+++ b/core/content/about/info.html
@@ -2,6 +2,19 @@
 	<h1>Changelog</h1>
 	<ul>
 		<li>
+			0.1.2.1
+			<ul>
+				<li>
+					Bug Fixes
+					<ul>
+						<li>
+							Fixed gallery bug with default Ids and left/right arrows
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</li>
+		<li>
 			0.1.2
 			<ul>
 				<li>
