Small style changes on social

--- a/local/content/about/social.html
+++ b/local/content/about/social.html
@@ -82,6 +82,22 @@
 	#aboutTableSmall{
 		display: none;
 	}
+	#aboutTable a{
+		font-weight:normal;
+	}
+	#aboutTableSmall a{
+		font-weight:normal;
+	}
+	#aboutTable a:hover{
+		font-weight:bold;
+	}
+	#aboutTableSmall a:hover{
+		font-weight:bold;
+	}
+	.fade:hover{
+		opacity: 0.5;
+ 		filter: alpha(opacity=50); /* For IE8 and earlier */
+	}
 	@media only screen and (max-width : 800px) {
 		#aboutTableSmall{
 			display: block;
