Added link to webcoreMJR

--- a/local/content/work/webApps.html
+++ b/local/content/work/webApps.html
@@ -21,6 +21,17 @@
 			</p>
 		</div>
 	</a>
+	<a href="https://github.com/mreishman/WebCoreMJR">
+		<div class="workRow">
+			<img class="workRowButtons" align="left" src="/media/img/work/webApps/webCoreMJR.png">
+			<h2>
+				WebCoreMJR
+			</h2>
+			<p>
+				The framework for my websites
+			</p>
+		</div>
+	</a>
 	<a href="https://github.com/mreishman/SeleniumMonitor">
 		<div class="workRow">
 			<img class="workRowButtons" align="left" src="/media/img/work/webApps/seleniumMonitor.png">
