--- a/local/content/about/about.html
+++ b/local/content/about/about.html
@@ -4,6 +4,6 @@
 		My name is Matt Reishman and I graduated from Southeast Missouri State University in the spring of 2016. I majored in Computer Information Systems and also minored in Telecommunications Graphics and Computer Networking.
 	</p>
 	<p>
-		Stuff I enjoy
+		I like creating pictures / animations in 3D using blender, and working on fun programming projects. I also like to bike and hike, when weather permits.
 	</p>
 </div>
