--- a/local/content/about/social.html
+++ b/local/content/about/social.html
@@ -2,7 +2,7 @@
 	<table style="font-size:135%;" width="100%" height="100%" align="center" cellpadding="0px" cellspacing="0px">
 		<tr>
 			<th style="background-color:#0077B5">
-				<a href="https://twitter.com/mreishman"  target="_blank">
+				<a href="https://www.linkedin.com/in/matt-reishman-44a08864"  target="_blank">
 					<img class="fade" src="/media/img/social/linkedin.png" alt="LinkedIn" width="150" height="auto" id="LinkedIn">
 				</a> 
 			</th>
@@ -24,7 +24,7 @@
 		</tr> 
 		<tr >
 			<th style="background-color:#0077B5">
-				<a href="https://twitter.com/mreishman"  target="_blank"> LinkedIn </a>
+				<a href="https://www.linkedin.com/in/matt-reishman-44a08864"  target="_blank"> LinkedIn </a>
 			</th>
 			<th style="background-color:#bb0000">
 				<a href="https://www.youtube.com/user/94cen" target="_blank">Youtube </a>
@@ -46,10 +46,10 @@
 		</tr>
 		<tr style="background-color:#0077B5" height="280px"> 
 			<th>   
-				<a href="https://twitter.com/mreishman"  target="_blank"><img src="/media/img/social/linkedin.jpg" alt="LinkedIn" width="150" height="auto" id="LinkedIn2"></a> 
+				<a href="https://www.linkedin.com/in/matt-reishman-44a08864"  target="_blank"><img src="/media/img/social/linkedin.jpg" alt="LinkedIn" width="150" height="auto" id="LinkedIn2"></a> 
 			</th>
 			<th>
-				<a href="https://twitter.com/mreishman"  target="_blank">  LinkedIn </a>
+				<a href="https://www.linkedin.com/in/matt-reishman-44a08864"  target="_blank">  LinkedIn </a>
 			</th>
 				</tr>
 			<tr style="background-color:#bb0000" height="280px">
